# NovaDesign

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  io.nova.Design.desktop  io.nova.Design.json  io.nova.Design.metainfo.xml  io.nova.Design.yaml
.github/workflows/: ci.yml
crates/nova-app/: Cargo.toml
crates/nova-app/src/: application.rs  main.rs
crates/nova-app/src/ui/: mod.rs  window.rs  workspace.rs
crates/nova-app/src/ui/dialogs/: bom_dialog.rs  mod.rs  project_dialog.rs
crates/nova-bom/: Cargo.toml
crates/nova-bom/src/: drywall.rs  electrical.rs  lib.rs  suspended_ceiling.rs
crates/nova-core/: Cargo.toml
crates/nova-core/src/: building.rs  components.rs  geometry.rs  layer.rs  lib.rs  material.rs
crates/nova-i18n/: Cargo.toml
crates/nova-i18n/src/: lib.rs  locales.rs
crates/nova-plugin-sdk/: Cargo.toml
crates/nova-plugin-sdk/src/: lib.rs  manager.rs  traits.rs  wasm_host.rs
flatpak/: io.nova.Design.desktop  io.nova.Design.json  io.nova.Design.metainfo.xml
js/: app.js  calculator.js  contacts.js  projects.js  schedule.js
nova-app/: Cargo.toml
nova-app/src/: main.rs
nova-biz/: Cargo.toml
nova-biz/src/: lib.rs
nova-bom/: Cargo.toml
nova-bom/src/: lib.rs
nova-core/: Cargo.toml
nova-core/src/: building.rs  ceilings.rs  drywall.rs  electrical.rs  lib.rs  plumbing.rs
nova-design/: Cargo.toml
nova-design/examples/: integration_test.rs
nova-design/src/: application.rs  main.rs
nova-design/src/ui/: business.rs  mod.rs  properties.rs  sidebar.rs  views.rs
nova-i18n/: Cargo.toml
nova-i18n/locales/: en.ftl  it.ftl
nova-i18n/src/: lib.rs
nova-plugin-sdk/: Cargo.toml
nova-plugin-sdk/src/: lib.rs
scripts/: dev-setup.sh
styles/: main.css
