[workspace]
members = [
    "nova-core",
    "nova-bom", 
    "nova-biz",
    "nova-i18n",
    "nova-plugin-sdk",
    "nova-design"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["NovaDesign Contributors"]
repository = "https://github.com/linuxiano85/NovaDesign"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = { version = "0.9", features = ["macros"] }
gtk4 = "0.8"
libadwaita = "0.6"