[workspace]
members = [
    "crates/nova-app",
    "crates/nova-core",
    "crates/nova-bom",
    "crates/nova-i18n",
    "crates/nova-plugin-sdk"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Nova Design Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
strum = { version = "0.26", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.metadata]
description = "Nova Design - Linux-only CAD/BIM light for trades, built in Rust."