[package]
name = "nova-i18n"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internationalization support for NovaDesign"

[dependencies]
fluent.workspace = true
fluent-bundle.workspace = true
unic-langid = { workspace = true, features = ["macros"] }