[package]
name = "nova-app"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Nova Design - Linux-only CAD/BIM light for trades, built in Rust."

[dependencies]
adw = { version = "0.6", package = "libadwaita" }
gtk4 = { version = "0.8", package = "gtk4" }
glib = "0.18"
gio = { version = "0.18", features = ["v2_74"] }
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
nova-core = { path = "../nova-core" }
nova-bom = { path = "../nova-bom" }
nova-i18n = { path = "../nova-i18n" }
nova-plugin-sdk = { path = "../nova-plugin-sdk" }