[package]
name = "nova-bom"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Bill of Materials (BOM) calculation engine for Nova Design"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
nova-core = { path = "../nova-core" }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }