[package]
name = "nova-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core data models and types for Nova Design"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }