[package]
name = "nova-i18n"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Internationalization support for Nova Design"

[dependencies]
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"
unic-langid = "0.9"
thiserror = { workspace = true }